# BSUIR

./: .gitignore
C++/ABP/LabWork_1/: ex.cpp  logger.h  main.cpp  makefile
C++/ABP/LabWork_1/LabWork_1.xcodeproj/: project.pbxproj
C++/ABP/LabWork_1_Andrey/: main.cpp  makefile
C++/ABP/LabWork_1_Andrey/LabWork_1.xcodeproj/: project.pbxproj
C++/ABP/LabWork_2/: logger.h  main.cpp  makefile
C++/ABP/LabWork_2/LabWork_2.xcodeproj/: project.pbxproj
C++/ABP/LabWork_3/: main.cpp
C++/ABP/LabWork_3/LabWork_3.xcodeproj/: project.pbxproj
C++/ABP/LabWork_4/LabWork_4/: main.cpp
C++/ABP/LabWork_4/LabWork_4.xcodeproj/: project.pbxproj
C++/ABP/LabWork_8/: CMakeLists.txt  main.cpp
C++/ABP/LabWork_8/ffmpeg/: INSTALL_RECEIPT.json
C++/ABP/LabWork_8/ffmpeg/.brew/: ffmpeg.rb
C++/ABP/LabWork_8/ffmpeg/lib/: libavdevice.59.4.100.dylib  libavfilter.8.24.100.dylib  libavformat.59.16.100.dylib  libavutil.57.17.100.dylib  libpostproc.56.3.100.dylib  libswresample.4.3.100.dylib  libswscale.6.4.100.dylib
C++/ABP/LabWork_8/ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-filters.1  ffplay-all.1  ffprobe-all.1
C++/ABP/MOD_LAB_1/: CMakeLists.txt  main.cpp
C++/APK/LabWork_APK_1/LabWork_APK_1/: asm.s  main.c
C++/APK/LabWork_APK_1/LabWork_APK_1.xcodeproj/: project.pbxproj
C++/Boost/Exercise_1/Exercise/: main.cpp
C++/Boost/Exercise_1/Exercise_1.xcodeproj/: project.pbxproj
C++/Bus_stop/: main.cpp
C++/Bus_stop/Bus/: Bus.hpp
C++/Bus_stop/Bus Company/: cBusCompany.cpp
C++/Bus_stop/Time/: cTime.hpp
C++/Coursera/Coursera/: main.cpp
C++/Coursera/Coursera.xcodeproj/: project.pbxproj
C++/Diary/: main.cpp
C++/Diary/Diary.xcodeproj/: project.pbxproj
C++/Diary/Header/Protection/: Protection.hpp
C++/Diary/Source/Inheritance/: Event.cpp
C++/IIPY/LabWork_1/LabWork_1/: main  main.cpp
C++/IIPY/LabWork_1/LabWork_1.xcodeproj/: project.pbxproj
C++/IIPY/LabWork_1/fsystem/: fsystem.cpp  fsystem.hpp
C++/KDandPL/LabWork_1/LabWork_1/: Lab 1.hpp  Window.xib
C++/KDandPL/LabWork_1/LabWork_1.xcodeproj/: project.pbxproj
C++/KDandPL/LabWork_2/: Application.xib
C++/KDandPL/LabWork_2/LabWork_3_Operator.xcodeproj/: project.pbxproj
C++/KDandPL/LabWork_3/: Header.h  SwiftUIView.swift
C++/KDandPL/LabWork_3/Source/: main.cpp
C++/KPP/Lab/Lab/: main.cpp
C++/KPP/LabWork/LabWork.xcodeproj/: project.pbxproj
C++/KPP/LabWork/LabWork_2/: main.cpp
C++/KPP/Project/: Makefile
C++/KPP/Project/Files/: WordDelete.txt
C++/KPP/Project/Header/: filesys.h
C++/KPP/Project/Test/: test.cpp
C++/LabWork_1/: CMakeLists.txt  main.cpp
C++/LabWork_1/matrix/: matrix.hpp
C++/MyAssignments/Bus_stop/Bus/: Bus.cpp
C++/MyAssignments/Bus_stop/Bus Company/: cBusCompany.hpp
C++/MyAssignments/Bus_stop/Time/: cTime.cpp
C++/MyAssignments/Bus_stop/file/: Timetable  cFile.cpp  cFile.hpp
C++/MyAssignments/Codewars/Source/: main.cpp
C++/MyAssignments/Linux machine/: Makefile  main
C++/MyAssignments/Linux machine/Linux machine.xcodeproj/: project.pbxproj
C++/MyAssignments/Linux machine/Source/: main.cpp
C++/MyAssignments/Math tasks/LabWork.xcodeproj/: project.pbxproj
C++/MyAssignments/Math tasks/Source/: main.cpp
C++/MyAssignments/Predicates/Header/: predicates.h
C++/MyAssignments/Predicates/Source/: main.cpp
C++/MyAssignments/Predicates/Test/: Makefile
C++/MyAssignments/Search in processes/WinAPI/: Search in processes.sln
C++/SPOLKS/LabWork_1/serialization/: serialization.cpp  serialization.hpp
C++/SPOLKS/LabWork_1/src/: main.cpp
C++/SPOVM/LabWork_1/Child/: main.cpp
C++/SPOVM/LabWork_1/Dad/: main.cpp
C++/SPOVM/LabWork_1/LabWork_1.xcodeproj/: project.pbxproj
C++/SPOVM/LabWork_2/Child/: main.cpp
C++/SPOVM/LabWork_2/Dad/: main.cpp
C++/SPOVM/LabWork_2/LabWork_2.xcodeproj/: project.pbxproj
C++/SPOVM/LabWork_3/: Header.h
C++/SPOVM/LabWork_3/Client/: client.cpp
C++/SPOVM/LabWork_3/LabWork_3.xcodeproj/: project.pbxproj
C++/SPOVM/LabWork_3/server/: server.cpp
C++/SPOVM/LabWork_4/Child/: child.cpp
C++/SPOVM/LabWork_4/Dad/: dad.cpp  makefile
C++/SPOVM/LabWork_4/LabWork_4.xcodeproj/: project.pbxproj
C++/SPOVM/LabWork_5/: makefile
C++/SPOVM/LabWork_5/LabWork_5.xcodeproj/: project.pbxproj
C++/SPOVM/LabWork_5/c_aio_files/: AioFilesRW.cpp  AioFilesRW.hpp
C++/SPOVM/LabWork_5/dad/: main.cpp
C++/SPOVM/LabWork_5/header/: Header.h
C++/SPOVM/LabWork_5/source/: main.cpp
C++/SPOVM/LabWork_6/LabWork_6/: main.cpp
C++/SPOVM/LabWork_6/LabWork_6.xcodeproj/: project.pbxproj
C++/SPOVM/LabWork_6/Memory/: memory.hpp
C++/SPOVM/LabWork_6/Tree/: Tree.cpp  Tree.hpp
C++/TOKC/LabWork_1/: leveldbutil  libleveldb.1.23.0.dylib  makefile
C++/TOKC/LabWork_1/LabWork_1.xcodeproj/: project.pbxproj
C++/TOKC/LabWork_1/Pseudoports/: Pseudoports.cpp  Pseudoports.hpp
C++/TOKC/LabWork_1/PseudoportsSettings/: PseudoPSettings.hpp
C++/TOKC/LabWork_1/SerialPorts/: SerialPorts.cpp  SerialPorts.hpp
C++/TOKC/LabWork_1/Source/: main.cpp
C++/TOKC/LabWork_1/pit/: main.cpp
C++/TOKC/LabWork_2/Adress/: IPv4.cpp  IPv4.hpp
C++/TOKC/LabWork_2/LabWork_2.xcodeproj/: project.pbxproj
C++/TOKC/LabWork_2/Package/: Package.cpp
C++/TOKC/LabWork_2/Socket/: Socket.cpp
C++/TOKC/LabWork_2/Source/: smain.cpp
C++/TOKC/LabWork_2_COM/Package/: Package.cpp  (+1 more)
С/LabWork_1/LabWork_1.xcodeproj/: project.pbxproj
С/LabWork_1/Struct/: main.c
С/LabWork_2/Converting_colors/: main.cpp
С/LabWork_2/LabWork_2.xcodeproj/: project.pbxproj
С/LabWork_3/LabWork_3.xcodeproj/: project.pbxproj
С/LabWork_4/: Cyclic shift.data
С/LabWork_4/Binary_files/: main.c
С/LabWork_4/LabWork_4.xcodeproj/: project.pbxproj
С/LabWork_5/LabWork_5.xcodeproj/: project.pbxproj
С/LabWork_5/Lists/: main.c
С/LabWork_6/LabWork_6.xcodeproj/: project.pbxproj
С/LabWork_6/Queue_and_ring/: main.c
С/LabWork_7/LabWork_7.xcodeproj/: project.pbxproj
С/LabWork_7/Вinary_trees/: main.c
С/lab 1.struct/LabWork_1.xcodeproj/: project.pbxproj
С/lab 1.struct/Struct/: main.c
С/lab 3.FIle/LabWork_3.xcodeproj/: project.pbxproj
С/lab 3.FIle/Text_File/: main.c
С/lab 7. Binary trees/LabWork_7.xcodeproj/: project.pbxproj
(+308 files in other folders)
